# graphics-programming-2-vulkan-project-OleksandrHlebov-main

./: .gitignore  CMakeLists.txt  README.md  compile_shader.bat
inc/: Application.h  Buffer.h  Camera.h  ColorDefines.h  CommandPool.h  DataTypes.h  DebugMessenger.h  DeletionQueue.h  DescriptorPool.h  DescriptorSet.h  DescriptorSetLayout.h  Device.h  DynamicRenderingApp.h  Globals.h  Helper.h  Image.h  Instance.h  Mesh.h  Pipeline.h  PipelineLayout.h  RenderPass.h  Sampler.h  Scene.h  ShaderStage.h  Subpass.h  SwapChain.h  TempHelpers.h  WorldTime.h
shaders/: basic_fragment_shader.frag  basic_triangle_shader.vert  blit.frag  cubemap.vert  depth_prepass.frag  diffuse_irradiance.frag  environment.frag  gbuffer_generation.frag  gbuffer_generation.vert  lighting.frag  lighting.vert  shadow_prepass.frag  shadow_prepass.vert
src/: Buffer.cpp  CommandPool.cpp  DebugMessenger.cpp  DescriptorPool.cpp  DescriptorSet.cpp  Device.cpp  DynamicRenderingApp.cpp  Helper.cpp  Image.cpp  Instance.cpp  Pipeline.cpp  RenderPass.cpp  Scene.cpp  ShaderStage.cpp  SwapChain.cpp  TempHelpers.cpp  WorldTime.cpp  main.cpp
